--- a/LoginProyect/LoginProyect.csproj
+++ b/LoginProyect/LoginProyect.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwRoot\html\" />
+  </ItemGroup>
+
 </Project>
